# metal-ocean

./: .gitignore  CMakeLists.txt  Info.plist.in  README.md  default-config.toml
shaders/: fft.metal  foam_common.h  foam_detail.metal  foam_update.metal  ocean_surface.metal  post_fft.metal  shader_types.h  sky.metal  spectrum.metal  spray_billboard.metal  spray_common.h  spray_emit.metal  spray_update.metal
src/bench/: BenchCameraPath.cpp  BenchCameraPath.h  BenchmarkHarness.cpp  BenchmarkHarness.h  CounterSampler.h  CounterSampler.mm
src/core/: App.cpp  App.h  Clock.cpp  Clock.h  Config.cpp  Config.h  Hash.h  InputEvent.h  OrbitCamera.cpp  OrbitCamera.h
src/gpu/: Buffer.h  Buffer.mm  MetalContext.h  MetalContext.mm  PipelineCache.h  PipelineCache.mm  Texture.h  Texture.mm
src/ocean/: Cascade.h  Cascade.mm  ProjectedGrid.cpp  ProjectedGrid.h  Simulation.h  Simulation.mm  Spectrum.cpp  Spectrum.h
src/platform/: AppDelegate.h  AppDelegate.mm  InputBridge.h  InputBridge.mm  OceanView.h  OceanView.mm  main.mm
src/render/: OceanRenderer.h  OceanRenderer.mm  SkyRenderer.h  SkyRenderer.mm  SprayRenderer.h  SprayRenderer.mm
src/ui/: DebugPanel.cpp  DebugPanel.h  ImGuiBackend.h  ImGuiBackend.mm
tests/: CMakeLists.txt  app_input_test.cpp  camera_test.cpp  config_test.cpp  fft_parity_test.cpp  fft_reference_test.cpp  foam_test.cpp  projected_grid_test.cpp  spectrum_test.cpp  spray_test.cpp
tests/support/: cpu_fft_reference.cpp  cpu_fft_reference.h
